# phonetic-translation-ml-seq2seq-attention

./: .gitignore  README.md  en_UK.csv  eng_to_esp_seq2seq_method.ipynb  eng_to_ipa_seq2seq_method.ipynb  eng_to_ipa_v2.ipynb  ipa_pairs.csv  ipa_pairs_all.csv  ipa_word_pairs.csv  pyproject.toml
ipa_translator/: saved_model.pb
ipa_translator/variables/: variables.index
ipa_translator_v2/: fingerprint.pb  saved_model.pb
ipa_translator_v2/variables/: variables.index
