[tool.poetry]
name = "phonetic-translation-ml-seq2seq-attention"
version = "0.1.0"
description = ""
authors = ["order&chaos <sean@orderandchaoscreative.com>"]
readme = "README.md"
packages = [{include = "phonetic_translation_ml_seq2seq_attention"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

